# harbor

./: .gitignore  CLAUDE.md  CONNECTOR_REFACTOR.md  Cargo.toml  DB_NORMALIZATION.md  DEPENDENCY_LAYERS.md  LICENSE  PROTOCOLS.md  README.md  REVIEW_LOG.md  SIMULATIONS.md  UPGRADE.md
bootstrap/: README.md  (+1 more)
core/: Cargo.toml  Connection.md  README.md
core/src/: Control.md  POW.md  UNIFIED_TYPES.md  UNIFIED_TYPES_PLAN.md  events.rs  lib.rs  main.rs
core/src/data/: dedup.rs  dht.rs  harbor.rs  identity.rs  mod.rs  outgoing.rs  schema.rs  start.rs  topic.rs
core/src/data/control/: mod.rs
core/src/data/dht/: mod.rs  peer.rs  routing.rs
core/src/data/harbor/: cache.rs  dedup.rs  mod.rs  nodes.rs
core/src/data/membership/: epoch.rs  mod.rs  topic.rs
core/src/data/send/: mod.rs  outgoing.rs
core/src/data/share/: blob_store.rs  metadata.rs  mod.rs
core/src/data/sync/: mod.rs  persistence.rs
core/src/handlers/: control.rs  dht.rs  harbor.rs  live.rs  mod.rs  send.rs  share.rs  stream.rs  sync.rs
core/src/handlers/incoming/: dht.rs  harbor.rs  mod.rs  send.rs  share.rs  sync.rs
core/src/handlers/outgoing/: dht.rs  harbor.rs  mod.rs  send.rs  share.rs  sync.rs
core/src/http/: handlers.rs  mod.rs  parse.rs
core/src/keychain/: error.rs  mod.rs  service.rs
core/src/network/: connect.rs  gate.rs  membership.rs  mod.rs  packet.rs  pool.rs  process.rs  rpc.rs  service.rs  wire.rs
core/src/network/control/: incoming.rs  introductions.rs  lifecycle.rs  membership.rs  mod.rs  outgoing.rs  peers.rs  protocol.rs  service.rs  types.rs
core/src/network/dht/: actor.rs  api.rs  distance.rs  mod.rs  pool.rs  protocol.rs  rpc.rs  service.rs
core/src/network/dht/internal/: api.rs  bootstrap.rs  config.rs  distance.rs  lookup.rs  mod.rs  pool.rs  routing.rs
core/src/network/harbor/: client.rs  incoming.rs  mod.rs  network.rs  outgoing.rs  protocol.rs  service.rs
core/src/network/live/: mod.rs  protocol.rs  service.rs  session.rs
core/src/network/membership/: messages.rs  mod.rs
core/src/network/send/: dm.rs  dm_messages.rs  incoming.rs  mod.rs  outgoing.rs  pool.rs  protocol.rs  service.rs  topic.rs  topic_messages.rs
core/src/network/share/: acquire.rs  distribute.rs  incoming.rs  mod.rs  protocol.rs  service.rs
core/src/network/stream/: mod.rs  protocol.rs  service.rs  session.rs
core/src/network/sync/: mod.rs  protocol.rs  service.rs
core/src/network/topic/: mod.rs  service.rs  types.rs
core/src/protocol/: api.rs  config.rs  core.rs  error.rs  events.rs  mod.rs  send.rs  share.rs  stats.rs  sync.rs  target.rs  topics.rs  types.rs
core/src/protocol/stats/: mod.rs  service.rs  types.rs
core/src/resilience/: mod.rs  proof_of_work.rs  rate_limit.rs  storage.rs
core/src/security/: create_key_pair.rs  derive_key.rs  dm_keys.rs  mod.rs  topic_keys.rs
core/src/security/harbor/: authenticate.rs  encrypt.rs  mod.rs  sign.rs
core/src/security/send/: mod.rs  packet.rs  seal.rs
core/src/tasks/: find_harbor_nodes.rs  harbor_pull.rs  harbor_sync.rs  maintenance.rs  mod.rs  replication.rs  share_pull.rs  sync_flush.rs
core/src/testing/: mod.rs  network.rs  node.rs
stream/: Cargo.toml  README.md
stream/src/: lib.rs
sync/: Cargo.toml  PROPOSAL.md  README.md
sync/src/: lib.rs
(+123 files in other folders)
